# If-I-Could-Turn-Back-Time

./: .gitignore  README.md  add_gpu_count.py  aggregate.py  aggregate.slurm  all_models_incorrect_q.json  calculate_b_c.py  calculate_mcnemar.py  chat.py  deepseek671b_incorrect_q.json  evaluate.py  evaluate_array.slurm  find_false_questions.py  generate_graph.py  graph_families.py  identify_questions.py  mcnemar_results.csv  ollama_serve.slurm  pareto_analysis.py  pyproject.toml  remove_questions.py  requirements.txt  sanitize_names.py
_smoke_test_outputs/: all_models_incorrect_q.json  deepseek671b_incorrect_q.json
llama_prev_results/: llama3.1:405b_no.json
results/: NorwAI-Magistral-24B-reasoning:Q8:0_en.json  NorwAI-Magistral-24B-reasoning:Q8:0_no.json  deepseek-r1:1.5b_en.json  deepseek-r1:1.5b_no.json  deepseek-r1:14b_en.json  deepseek-r1:14b_no.json  deepseek-r1:32b_en.json  deepseek-r1:32b_no.json  deepseek-r1:671b_en.json  deepseek-r1:671b_no.json  deepseek-r1:70b_en.json  deepseek-r1:70b_no.json  deepseek-r1:7b_en.json  deepseek-r1:7b_no.json  gemma3:1b_en.json  gemma3:1b_no.json  gemma3:270m_en.json  gemma3:270m_no.json  gemma3:27b_en.json  gemma3:27b_no.json  gemma3:4b_en.json  gemma3:4b_no.json  gpt-oss:120b_en.json  gpt-oss:120b_no.json  gpt-oss:20b_en.json  gpt-oss:20b_no.json  llama3.1:405b_en.json  llama3.1:70b-instruct-q4_K_M_en.json  llama3.1:70b-instruct-q4_K_M_no.json  llama3.1:70b_en.json  llama3.1:70b_no.json  llama3.1:8b_en.json  llama3.1:8b_no.json  magistral:24b-en.json  magistral:24b-no.json  norwai-mixtral-8x7b:en.json  qwen3:0.6b_en.json  (+13 more)
(+1 files in other folders)
